--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    Hello World
+       <p>Hello World</p>
+        <a href="home.html"></a>
 </body>
 </html>
