--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
        <p>Hello World</p>
-        <a href="home.html"></a>
+        <a href="home.html">Home</a>
 </body>
 </html>
